Removing GetTabId compilation error

Error:

In file included from gen/chrome/browser/browser_jumbo_20.cc:34:
./../../chrome/browser/offline_pages/offline_page_url_loader.cc:30:6: error: redefinition of 'GetTabId'
bool GetTabId(content::WebContents* web_contents, int* tab_id) {
     ^
./../../chrome/browser/offline_pages/offline_page_request_job.cc:46:6: note: previous definition is here
bool GetTabId(content::WebContents* web_contents, int* tab_id) {
     ^

Compilation settings:

target_os="android"
target_cpu="arm"
enable_nacl=false
symbol_level=0
remove_webcore_debug_symbols=true
is_debug=false
dcheck_always_on=false
is_component_build=false
use_jumbo_build=true

Presubmit warning:

Banned functions were used.
    chrome/browser/offline_pages/offline_page_request_job.cc:227:
      Please consider using base::Bind{Once,Repeating} instead
      of base::Bind. (crbug.com/714018)

BUG=849792

Change-Id: I74fa48c00dcf31a29cab60848015c6d042d51d1a
Reviewed-on: https://chromium-review.googlesource.com/1087228
Reviewed-by: Cathy Li <chili@chromium.org>
Commit-Queue: Marcin Wiącek <marcin@mwiacek.com>
Cr-Commit-Position: refs/heads/master@{#564679}
Former-commit-id: 090c04d0591cd975f8ae3d33c528a2ede06bd141